--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
     <title>Caban</title>
 </head>
 <body>
-
+<div class="header">
+    <div class="logo">
+        <img src="assets/img/c_logo.png" width="100%">
+    </div>
+</div>
 
 
 
